# trading-calculator-web3

./: .gitignore  README.md
backend/: .dockerignore  Cargo.toml  Dockerfile  cloudbuild.yaml
backend/frontend/: index.html
backend/frontend/css/: style.css
backend/src/: main.rs
contracts/src/: TradingCalculator.sol
contracts/test/: TradingCalculator.t.sol
frontend/: index.html
