[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.0"
bitcoin = { version = "0.32.7", features = ["serde"] }
ethers = { version = "2.0.14", features = ["rustls", "ws"] }
eyre = "0.6.12"
reqwest = { version = "0.12.24", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.145"
solana-client = "3.1.1"
solana-sdk = "3.0.0"
tokio = { version = "1.48.0", features = ["full"] }
actix-files = "0.6"
actix-cors = "0.7"